[tool.poetry]
name = "fastfm2"
version = "0.3.8"
description = ""
authors = ["palaimon.io <oss@mail.palaimon.io>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.1"
numpy = "^1.17"
scipy = "^1.3"

[tool.poetry.dev-dependencies]
jedi = "^0.15.1"
flake8 = "^3.7"
pylint = "^2.3"
pytest = "^5.1"
jupyterlab = "^1.0"
cython = "^0.29.13"
pandas = "^0.25.2"
matplotlib = "^3.1"
delocate = "^0.8.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
