[tool.poetry]
name = "fastfm2"
version = "0.5.0"
description = "A Library for Factorization Machines"
authors = ["palaimon.io <oss@mail.palaimon.io>"]
license = "GNU AGPLv3"
readme = "README.md"
repository = "https://github.com/palaimon/fastfm2"
packages = [{ include = "fastfm2" }]
include = [{ path = "./*.so", format = "wheel" },
           { path = "./*.pyd", format = "wheel" }]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.22.1"
numpy = "1.17"
scipy = "^1.3"

[tool.poetry.dev-dependencies]
jedi = "^0.15.1"
flake8 = "^3.8.4"
pylint = "^2.3"
pytest = "^5.1"
jupyterlab = "^1.0"
cython = "^0.29.13"
pandas = "^0.25.2"
matplotlib = "^3.1"
delocate = "^0.8.0"
cmake = "^3.12"

[build-system]
requires = ["poetry-core",
            "numpy==1.17",
            "wheel",
            "Cython"]

build-backend = "poetry.core.masonry.api"